--- a/Implementation/AwesomePokerGameSln/Properties/Resources.resx
+++ b/Implementation/AwesomePokerGameSln/Properties/Resources.resx
@@ -207,6 +207,7 @@
   </data>
   <data name="_9_of_spades" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\9_of_spades.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="_4_of_spades" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\4_of_spades.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -7080,6 +7081,7 @@
   </data>
   <data name="Flexing" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Flexing.gif;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="_10_of_spades" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\10_of_spades.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
